fixing dark mode

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, body{
+body{
     margin: 0;
     padding: 0;
     width: 100%;
@@ -120,7 +120,6 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--maine-color);
     color: var(--text-color);
 }
 
